gatsby: home/testimonials z-index fix

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -4,7 +4,7 @@
   -moz-box-shadow: 0px 2px 5px #00000026;
   box-shadow: 0px 2px 5px #00000026;
   border-bottom: 1px solid #efefef;
-  z-index: 9;
+  z-index: 11;
   position: fixed;
   top: 0;
   left: 0;
